# rivertensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  editable-install.sh  environment.yml  hw.md  pyproject.toml
example/: backprop.py  mnist.py
include/: cublas-handle.h  macros.h  pytensor.h  tensor.h
mnist/: mnist.py
net/: mnist_net.pkl  mnist_net_conv.pkl
src/: conv2d-back.cu  conv2d.cu  cross-entropy.cu  matmul.cu  pooling.cu  pybind.cc  tensor-arith.cu  tensor-init.cu  tensor-numpy.cc  tensor-reduce.cu  tensor.cu
src/rivertensor/: __init__.py  adtensor.py  net.py  op.py  opbase.py  optim.py  tensor_init.py
test/: bench_conv2d.py  bench_matmul.py  tensor_test.cc  test_arith.py  test_autodiff.py  test_celoss.py  test_conv2d.py  test_matmul.py  test_pooling.py
torch-task/: baseline.py  ddp.py  modelpar.py
